--- a/C1-Structure.tex
+++ b/C1-Structure.tex
@@ -3,14 +3,16 @@
 
 \section{研究背景与意义}
 
-研究背景与意义
+善待生命和周遭的一切。用心去感受大自然和生命的馈赠。
 
 加引用\cite{hinton2012deep}
 
 \section{研究现状}
 
-研究现状
+人们的感情开始淡漠起来，重视金钱和物欲，却忽视了大自然的力量。
 
 \section{本文主要贡献}
 
-本文主要贡献
+呼吁人们热爱自己的家人，善待自己的朋友，感恩拥有的一切。
+
+从中找到自我。我是一个复杂的概念。
