--- a/B1-ABSTRACT.tex
+++ b/B1-ABSTRACT.tex
@@ -1,15 +1,9 @@
 \chapter*{\zihao{-3}\heiti 摘\quad 要}
 \xiaosi{
 
-写摘要。
+我的猫丢了。
 
-首先，我们写了一段摘要。
-
-其次，我们写了一段摘要。
-
-最后，我们写了一段摘要。
-
-综上所述，我们写了一段摘要。
+我的猫找到了。
 
 }
 
