--- a/C6-Summary.tex
+++ b/C6-Summary.tex
@@ -1,5 +1,9 @@
 \chapter{总结与展望}
 
+凡事都有好的和坏的理解。你愿意相信哪种思路呢？你愿意接受哪种理解下的世界呢？很多人会左右摇摆不决，身边的人也会默默离他而去。全部善意的世界或是全恶意的世界本就是不存在的。
+
+有人看金是金，看银是银。有人看金是银，看银是金。有人看金银为宝物，有人视金银如粪土。
+
 \section{本文总结}
 
 众生平等
