--- a/C3.tex
+++ b/C3.tex
@@ -1,10 +1,40 @@
 \chapter{圆圆}
 
-\section{本章小节}
-\label{sec:deep-summary}
+\section{圆圆从哪里来}
+\label{sec:yuan-from}
 
-猫猫的由来
+“猫猫还在吗？”
 
-猫猫的待遇
+“在的。”
 
-猫猫的离开
+长期在闲鱼关注领养流浪猫的我终于找到了靠谱的收养人。她是附近一所大学的研究生，专门在校外租房，收养那些各地而来的可怜小猫。她的小猫介绍也别出一格——“这只黑白相见的小猫是在多功能厅的天花板隔层里找到的。当时母猫已经不在了，三只小猫相依为命。希望你可以善待她哦。”
+
+我费了一番力气登门她的出租屋。麻雀虽小，五脏俱全。随着我停留得越久，就有越多小猫从各种地方“长”出来。有的从衣柜里翻出来，有的从床头被子里冒出来。这些小猫的性格各不相同。有的大大咧咧，一副初生牛犊不怕虎的样子。有的则怀有心事，我一瞅就灰不溜秋地躲起来。甚至有一只小狸猫，她主人抱起以后直接拉尿在她身上。她急忙松开怀抱，让她自由地躲起来。
+
+这个小小的房间里起码有九只喵喵，怎么挑选我的心上猫呢？我的第一标准是年龄。三个月以上的我就不考虑了，怕他们已经形成了自己的喵生观，强行把他们带离这个熟悉的社群他们反而会闷闷不乐。三个月以内的小猫只剩下三只。我拿了个逗猫棒仔细看他们玩耍的反映。有的很喜欢摸高，只要把逗猫棒放在他面前，便一定要用爪子刮到面前的小羽毛。大概小猫猫都是喜欢天上的飞鸟的吧。有只尤为特别，她从来不在小猫多的时候伸出小爪子。直等到其他小猫尽兴了去别处了，才愿意简简单单扑个空。这只小猫像极了我认识的一个熟人。从来不会赶热闹，尤其喜欢夜深人静的思考。
+
+“把她带回家可能会比较合适吧！”我脑袋里冒出了收养它的想法。但我的审美还在作祟。她看起来好普通呀，身子都是白的，头上的刘海也不够对称，眼睛和耳朵也脏兮兮的，不知道有什么病菌呢。再看看其他几只小猫，身上有大面积的橘色或者狸猫色，这样的颜色多奇异啊。我心里盘算着，养猫当然要养只外形独特的，不然抱回家，连精心伺候的耐心都没了。
+
+但是外表真的重要吗？我想起了精品猫舍里长毛的波斯猫和布偶猫，这些本不该出现在我们这个北半球亚热带气候的国度的血统猫。他们的出现是商人对于商机的敏锐嗅觉，从物种的存在性来考虑，他们的肠道经常出现问题，身上的毛也太厚。但是长像普通的猫咪，我们倒也不急着把他们往家里揽——猫猫在野外活得很好呀，为什么要圈养他们做人类的宠物呢。
+
+\begin{figure}[t]
+    \centering
+    \includegraphics[width=0.5\textwidth]{fig/firstmeet.jpg}
+    \caption{弱不禁风的小圆圆}
+    \label{firstmeet}
+\end{figure}
+
+想着想着，我渐渐模糊了此行的目的就是带走一只流浪猫，让她免受自然环境的恶劣之苦。我盯着面前这个小家伙，终于决定，就是她了！脸圆圆的，像是英短和土生白猫的混血儿(见图~\ref{firstmeet})。看起来有点不合群，因为她在专心地思考些什么问题。
+
+\section{圆圆成为我们的家人}
+\label{sec:yuan-join-our-family}
+
+噤声的小猫咪被装进猫猫专用的航空箱，直接关进我的后备箱。回家的半个小时时间里，她窝在角落害怕地喵了几声。之后便熟悉了那个黑暗的角落，不再言语了。
+
+到家后的第一件事就是给这只弱不禁风的小猫洗澡！我曾经看到过网上的视频，小猫猫像是个大佬仰卧在洗手盆里，而人类像是个臣子为她按摩冲浴。没想到我们家这只小生物偏偏就是怕水的。我把它放进洗手盆的过程就惨遭她的鄙夷。落汤以后得小猫看起来更加楚楚动人。打湿了猫毛的她可以清晰地看出骨骼的生长情况，瘦瘦小小的她需要补充更多的营养。
+
+一开始猫粮还没到位，我和队友先让她吃了几天小黄鱼拌饭。等猫粮到位了，她便顺顺利利地过渡到特制的猫粮。队友还很贴心地给娃准备了每个月的鱼罐头。
+
+因为她圆圆的头骨和圆圆的眼睛，我们给她起名为圆圆。这下每天下班以后，我可以有个新的朋友一起玩耍啦。小圆圆的存在让我意识到了自己是多么渴望和新的家人去说话和拥抱。和所有养猫人一样，圆圆出现以后，我的手机屏保和微信头像统统换成了她。
+
+% 猫猫的离开
