--- a/C4.tex
+++ b/C4.tex
@@ -9,3 +9,44 @@
 找工作的经历
 
 工作的终止
+
+被裁员的经历
+
+当老板以强提醒的方式ding我，并通知我去会议室时，我大概已经猜到发生了什么。毕竟，老板没事不会找我，入职以来只找我 one one 过两次——一次是刚入职沟通我的目标，二是年底沟通绩效。
+
+推开会议室的门，桌上摆着几份纸质文件。原来之前公司内网传得沸沸扬扬的裁员新闻是真的！我 一下就明白了，“不是吧！”，虽然有点意料之内，但这种新闻落到自己头上，总归有点吃惊。我在老板身边坐下，他连说了几句“我实在没办法”。
+
+现在回想那天的情形，仍旧很梦幻。本该十几分钟签完的文件，因为我的震惊和伤心，让老板又以过来人的身份对我多加安慰和教导，结果足足聊了一个小时。到底哪些是真话，哪些是官话，我已无从知晓。以下我将分析自己被裁的原因，以及分享一些在大厂学习到的工作经验。
+
+为什么被裁员的是我，而不是别人？
+
+1. 业务收缩，对公司而言性价比太低
+
+当时拿着sp进来，每个月拿着税后2w+的工资，对于父母都是工薪阶层的我来说，简直就是实现了梦想。但是作为一个应届生，技能绝对不如一个工资被倒挂的老员工。如果公司还有钱可以烧，没事，可以培养，把应届生的潜力转化为实力。但是对于业务收缩的部门而言，这种性价比极低的员工已经不适合继续留在公司开拓业务了。
+
+2. 没有寻找新的项目和突破点，成为了闲人
+
+公司的业务是在不断变化的，多个业务线有交叉也有融合。做项目的时候如果不能做一个看两个，那么当自己的业务线被砍的时候，就成了一座孤岛。在我所在的部门经历了一波人事变动之后，项目也有所调整。但是我没有积极地找老板聊，找其他同事抱团开拓新项目，而是守着自己的一亩三分地，企图通过调参提升结果。反观我的mentor，已经在分析完项目成果的上限以后去分析业务的其他增长点了。
+
+3. 没有正视和解决老板的需求
+
+我有一个直接带我的mentor和整个组的老板，有时候会遇到mentor和老板意见不同的时候。一个叫我做东，一个叫我做西。此时我的选择往往是跟着我的mentor，按照他给我制定的详细的方案做一些hard work。而老板私下问我工作进展或提出一些改进方案时，我往往是敷衍了事或是持回避态度。久而久之，老板自然会发现我的不靠谱，也不会信任我或者把新的项目交给我。同时，这样会增加我对mentor的依赖，使得决策能力进一步下降。
+
+大厂经验令人收益
+
+1. 直击痛点的培养模式
+
+总的来说，这段工作经历还是有点tough。除了每周的组会和周报以外，我的mentor还让我写每日工作计划。他甚至会指出我思维上的惯性，一些我从未注意到的陋习：提问稀碎、作息不规律、依赖性强。记得在学校里的时候，我经常在课后找老师问问题，还为自己能提出问题而沾沾自喜。但是现在反思起来，一些稀碎的问题真的值得问吗？能通过自己去查阅资料获得吗？经过自己认真的思考了吗？如果要提出一个有价值的问题，势必要先自我解决掉一些不值一提的问题。
+
+2. 培养目标感和经营思维，参与决策，减少 hard work
+
+对于初级员工而言，就是在不断执行上级的命令。但如果把自己局限于此，并乐于 hard work，实际上是很难获得真正的成长的。迷失于细节，往往要消耗大量的时间。而时间是一种稀缺资源，一旦大量用于细节上的试错，便会减少决策和调研，使得项目不能如期完成。在写文档的时候也需要注意目标感，将目标用一句话写出来，后面的实验围绕着目标铺开，不做漫无目的的数据展示。正如老板的名言，“要学会偷懒。漫无目的不可能带来产出，这些时间为啥不去摸鱼呢？”
+
+3. 基础的数据分析先行
+
+公司的实际环境与数据不同于实验室，可能有大量的重复和无效的干扰数据，需要在前期就处理干净。分析数据的途径也多种多样，需要根据业务确认哪些数据是重点观察的对象。如果数据本身没有含义，再厉害的模型也不能建模出意义。
+
+裁员来势汹汹，我在当天就签署了劳动解除合同，公司承诺我N+1的赔偿（月薪按照当地月平均工资的3倍计算）。对于本地人而言，可以边躺边找下一份工了。未来不知道会如何，也许这会是我人生的一个分叉点。欢迎交流和讨论~
+
+谢谢各位~已经找到下一份工作，是老板内推的，所以异常顺利，涨薪10\%，相当于普调了。老板不忘继续教育……
+
